--- a/papers/index.html
+++ b/papers/index.html
@@ -1,1 +1,10 @@
-shit
+---
+layout: default
+title: Papers
+---
+
+<ul>
+	<li>2021. <i>A Head-to-Specifier Movement Account of
+	Multiple Pre-Subject Modals in Mandarin
+	Chinese</i>. Society of Linguistics Undergraduate Students, University of Berkeley</li>
+</ul>
