--- a/papers/index.html
+++ b/papers/index.html
@@ -4,7 +4,7 @@ title: Papers
 ---
 
 <ul>
-	<li>2021. <i>A Head-to-Specifier Movement Account of
+	<li>[Talk] 2021. <i>A Head-to-Specifier Movement Account of
 	Multiple Pre-Subject Modals in Mandarin
-	Chinese</i>. Society of Linguistics Undergraduate Students, University of Berkeley</li>
+  Chinese</i>. Society of Linguistics Undergraduate Students, University of Berkeley <a href="/slides_for_calslugs.pdf">[slides]<\a></li>
 </ul>
