--- a/papers/index.html
+++ b/papers/index.html
@@ -7,5 +7,5 @@ title: Papers
 	<li>[Talk] Apr 2021. <i>A Head-to-Specifier Movement Account of
 	Multiple Pre-Subject Modals in Mandarin
   Chinese</i>. Society of Linguistics Undergraduate Students, University of Berkeley. <a href="/files/slides_for_calslugs.pdf">[slides]</a></li>
-  <li>[Journal Article, under revision] May 2021. Moving Heads to Specifiers: Evidence from Mandarin Multiple Pre-Subject Modals. <i>Natural Language and Linguistic Theory</i>. <a href="/files/NLLT21.pdf">[pdf]</a></li>
+  <li>[Journal Article, under revision] Apr 2021. Moving Heads to Specifiers: Evidence from Mandarin Multiple Pre-Subject Modals. <i>Natural Language and Linguistic Theory</i>. <a href="/files/NLLT21.pdf">[manuscript]</a></li>
 </ul>
