--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@ title: Haoming Li's Homepage
 	<h1>Haoming Li</h1>
 	<p>I'm a fourth-year undergraduate at the University of Chicago, majoring in linguistics and computer science.
   </p>
+  <p>Sub-fields: syntax, semantics</p>
+  <p>Topics: wh-in-situ, binding, Across-the-Board, clause structure</p>
 </div><!-- /.blurb -->
