--- a/papers/index.html
+++ b/papers/index.html
@@ -1,11 +1,14 @@
 ---
 layout: default
-title: Papers - Haoming Li
+title: Research - Haoming Li
 ---
 
-<ul>
-  <li>[Talk] Apr 2021. A Head-to-Specifier Movement Account of
-    Multiple Pre-Subject Modals in Mandarin
-    Chinese. Society of Linguistics Undergraduate Students, University of Berkeley. <a href="/files/slides_for_calslugs.pdf">[slides]</a></li>
-  <li>[Journal Article, under revision] Apr 2021. Moving Heads to Specifiers: Evidence from Mandarin Multiple Pre-Subject Modals. <i>Natural Language and Linguistic Theory</i>. <a href="/files/NLLT21.pdf">[manuscript]</a></li>
-</ul>
+
+<div class="blurb">
+  <h1>Haoming Li's Research</h1>
+  <ul>
+    <li>[Talk] Apr 2021. A Head-to-Specifier Movement Account of
+    Multiple Pre-Subject Modals in Mandarin Chinese. Society of Linguistics Undergraduate Students, University of Berkeley. <a href="/files/slides_for_calslugs.pdf">[slides]</a></li>
+    <li>[Journal Article, under revision] Apr 2021. Moving Heads to Specifiers: Evidence from Mandarin Multiple Pre-Subject Modals. <i>Natural Language and Linguistic Theory</i>. <a href="/files/NLLT21.pdf">[manuscript]</a></li>
+  </ul>
+</div><!-- /.blurb -->
