--- a/papers/index.html
+++ b/papers/index.html
@@ -7,8 +7,8 @@ title: Research - Haoming Li
 <div class="blurb">
   <h1>Haoming Li's Research</h1>
   <ul>
-    <li>[Talk] Apr 2021. A Head-to-Specifier Movement Account of
-    Multiple Pre-Subject Modals in Mandarin Chinese. Society of Linguistics Undergraduate Students, University of Berkeley. <a href="/files/slides_for_calslugs.pdf">[slides]</a></li>
+    <li><p>[Talk] Apr 2021. A Head-to-Specifier Movement Account of
+      Multiple Pre-Subject Modals in Mandarin Chinese. Society of Linguistics Undergraduate Students, University of Berkeley. <a href="/files/slides_for_calslugs.pdf">[slides]</a></p></li>
     <li>[Journal Article, under revision] Apr 2021. Moving Heads to Specifiers: Evidence from Mandarin Multiple Pre-Subject Modals. <i>Natural Language and Linguistic Theory</i>. <a href="/files/NLLT21.pdf">[manuscript]</a></li>
   </ul>
 </div><!-- /.blurb -->
