--- a/papers/index.html
+++ b/papers/index.html
@@ -9,6 +9,6 @@ title: Research - Haoming Li
   <ul>
     <li><p>[Talk] Apr 2021. A Head-to-Specifier Movement Account of
       Multiple Pre-Subject Modals in Mandarin Chinese. Society of Linguistics Undergraduate Students, University of Berkeley. <a href="/files/slides_for_calslugs.pdf">[slides]</a></p></li>
-    <li>[Journal Article, under revision] Apr 2021. Moving Heads to Specifiers: Evidence from Mandarin Multiple Pre-Subject Modals. <i>Natural Language and Linguistic Theory</i>. <a href="/files/NLLT21.pdf">[manuscript]</a></li>
+    <li><p>[Journal Article, under revision] Apr 2021. Moving Heads to Specifiers: Evidence from Mandarin Multiple Pre-Subject Modals. <i>Natural Language and Linguistic Theory</i>. <a href="/files/NLLT21.pdf">[manuscript]</a></p></li>
   </ul>
 </div><!-- /.blurb -->
