--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: Haoming Li's Homepage
 ---
 <div class="blurb">
-	<h2>Haoming Li</h2>
-	<p>I'm a fourth-year undergraduate at the University of Chicago, majoring in linguistics and computer science.
+  <h2>Haoming Li</h2>
+  <p>I'm a first year Ph.D. student in linguistics at the Massachusetts Institute of Technology.
   </p>
   <p>Sub-fields: syntax, semantics</p>
   <p>Topics: wh-in-situ, binding, Across-the-Board, clause structure</p>
