--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@ title: Haoming Li's Homepage
 ---
 <div class="blurb">
   <h2>Haoming Li</h2>
-  <p>I'm a first year Ph.D. student in linguistics at the Massachusetts Institute of Technology.
-  </p>
+  <p>I'm a first year Ph.D. student in linguistics at the Massachusetts Institute of Technology. </p>
   <p>Sub-fields: syntax, semantics</p>
   <p>Topics: wh-in-situ, binding, Across-the-Board, clause structure</p>
 </div><!-- /.blurb -->
