--- a/papers/index.html
+++ b/papers/index.html
@@ -25,27 +25,30 @@ table td:last-of-type {
 
 
 {% for section in site.data.output %}
-  <h2>{{ section.section }}</h2>
-  <table>
-    {% for item in section.papers %}
-      <tr>
-        <td>{{ item.date }}</td>
-        <td>&nbsp;&nbsp;&nbsp;</td>
-        <td>
-          <b>{{ item.title }}</b>.<br>
-            {% if section.section == "Journal Articles" %}
-              <em>{{ item.publication }}</em>.
-            {% else %}
-              {{ item.publication }}.
-            {% endif %}
-            {% if item.author %}
-              <br>With {{ item.author }}.
-            {% endif %}
-        </td>
-        <td><a href="{{ item.url }}">{{ item.type }}</a></td>
-      </tr>
-    {% endfor %}
-  </table>
+<h2>{{ section.section }}</h2>
+<table>
+  {% for item in section.papers %}
+  <tr>
+    <td>{{ item.date }}</td>
+    <td>&nbsp;&nbsp;&nbsp;</td>
+    <td>
+      <b>{{ item.title }}</b>.<br>
+      {% if section.section == "Journal Articles" %}
+      <em>{{ item.publication }}</em>.
+      {% else %}
+      {{ item.publication }}.
+      {% endif %}
+      {% if item.author %}
+      <br>With {{ item.author }}.
+      {% endif %}
+      {% if item.supervisor %}
+      <br>Supervisor: {{ item.supervisor }}.
+      {% endif %}
+    </td>
+    <td><a href="{{ item.url }}">{{ item.type }}</a></td>
+  </tr>
+  {% endfor %}
+</table>
 {% endfor %}
 
 
