--- a/papers/index.html
+++ b/papers/index.html
@@ -15,7 +15,7 @@ title: Research - Haoming Li
     <tr>
       <td class="date">{{ item.year }}</td>
       <!-- <td>{{ item.month }}</td> -->
-      <td>&nbsp;&nbsp;&nbsp;</td>
+      <!-- <td>&nbsp;&nbsp;&nbsp;</td> -->
       <td>
         <b class="title">{{ item.title }}</b>.
         {% if section.section == "Journal Articles" %}
