--- a/poem/index.html
+++ b/poem/index.html
@@ -3,7 +3,7 @@ layout: default
 title: The Night of Sevens
 ---
 <p>
-The cruel, <i><span style="font-family: Libertinus Sans; font-size: 120%; font-style: italic; color: #f59ba9">amorous</span></i> flow of time pours itself into<br>
+The cruel, <i><span style="font-family: 'Libertinus Sans'; font-size: 120%; font-style: italic; color: #f59ba9">amorous</span></i> flow of time pours itself into<br>
 The mountains and seas that separate us.<br>
 How sublime, the static tides of <span style="color: #94e59a">emeralds</span> and<br>
 The horizontal cliffs of <span style="color: #79b0f9">sapphires</span>!<br>
@@ -16,7 +16,7 @@ I sent on the way to you!
   The stream of Sevens, it permeates the dense rounds of<br>
   Erratic dances of symbols that circle your fatigued soul.<br>
   When our eyes meet, they whisper to each other silently:<br>
-  Carry on, as my <span style="font-family: Libertinus Sans; font-size: 120%; font-style: italic; color: #f59ba9">love</span> has always and will forever.
+  Carry on, as my <span style="font-family: 'Libertinus Sans'; font-size: 120%; font-style: italic; color: #f59ba9">love</span> has always and will forever.
   <br>
 </p>
 
