--- a/poem/tikz.html
+++ b/poem/tikz.html
@@ -2,8 +2,8 @@
 layout: default
 title: The Night of Sevens
 ---
-<link rel="stylesheet" type="text/css" href="http://tikzjax.com/v1/fonts.css">
-<script src="http://tikzjax.com/v1/tikzjax.js"></script>
+<link rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">
+<script src="https://tikzjax.com/v1/tikzjax.js"></script>
 
 this<script type="text/tikz">
   \begin{tikzpicture}
