remove periods; font format = collection

--- a/papers/index.html
+++ b/papers/index.html
@@ -17,17 +17,17 @@ title: Research - Haoming Li
       <!-- <td>{{ item.month }}</td> -->
       <!-- <td>&nbsp;&nbsp;&nbsp;</td> -->
       <td>
-        <b class="title">{{ item.title }}</b>.
+        <b class="title">{{ item.title }}</b>
         {% if section.section == "Journal Articles" %}
-        <br><em>{{ item.publication }}</em>.
+        <br><em>{{ item.publication }}</em>
         {% else %}
-        <br>{{ item.publication }}.
+        <br>{{ item.publication }}
         {% endif %}
         {% if item.author %}
-        <br>With {{ item.author }}.
+        <br>With {{ item.author }}
         {% endif %}
         {% if item.supervisor %}
-        <br>Supervisor: {{ item.supervisor }}.
+        <br>Supervisor: {{ item.supervisor }}
         {% endif %}
       </td>
       <td>
